feat(account): 添加账户管理和部门管理功能
- 新增账户实体类Account，包含用户名、密码、租户ID等字段
- 创建账户API接口AccountApi，提供新增、删除、更新账户信息的功能
- 添加账户数据传输对象AccountDTO，用于登录信息传输
- 实现账户数据转换映射AccountMapper，支持PO到DTO的转换
- 创建账户请求参数封装类AccountPO，用于前端数据传递
- 添加账户数据库操作接口AccountRepository继承BaseMapper
- 创建账户角色关联关系实体类AccountRoleConnection
- 添加账户角色关联关系数据传输对象AccountRoleConnectionDTO
- 实现账户角色关联关系数据库操作接口AccountRoleConnectionRepository
- 创建账户角色关联关系业务逻辑类AccountRoleConnectionService
- 添加账户业务逻辑类AccountService，实现增删改查功能
- 创建账户返回前端数据封装类AccountVO
- 配置application.yaml应用配置文件
- 添加部门实体类Department，包含部门名称、编码等信息
- 创建部门账户关联关系实体类DepartmentAccountConnection
- 添加部门账户关联关系数据传输对象DepartmentAccountConnectionDTO
- 实现部门账户关联关系数据库操作接口DepartmentAccountConnectionRepository
- 创建部门账户关联关系业务逻辑类DepartmentAccountConnectionService
- 添加部门数据传输对象DepartmentDTO